# AgenticFilesystem

./: .env.example  .gitignore  .npmignore  CLAUDE.md  Dockerfile  README.md  TEST_GUIDE.md  docker-compose.yml  dockerStart.sh  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
scripts/: release.sh  run_tests.sh  wait_for_services.sh
seed/: create_binary_seeds.py  upload_seed.py
seed/files/code/: config.json  example.py
seed/files/docs/: api-reference.md  architecture.md  meeting-notes.txt
seed/files/office/: data.xlsx  report.docx
src/agentic_fs/: config.py  dependencies.py  main.py
src/agentic_fs/admin/: app.js  index.html  styles.css
src/agentic_fs/api/: admin.py  batch.py  dirs.py  files.py  middleware.py  router.py  search.py
src/agentic_fs/models/: admin.py  batch.py  common.py  file.py  search.py
src/agentic_fs/services/: batch.py  chunker.py  dedup.py  embedding.py  extractor.py  file_store.py  metadata_store.py  pairing.py  vector_store.py
src/agentic_fs/utils/: ids.py  mime.py  paths.py
src/agentic_fs/worker/: celery_app.py  pipeline.py  tasks.py
tests/: conftest.py  test_admin.py  test_batch.py  test_chunker.py  test_dedup.py  test_dirs.py  test_extractor.py  test_files.py  test_pipeline.py  test_search.py
