[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-fs"
version = "0.1.0"
description = "Agentic Filesystem — tenant-scoped file storage and semantic search API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "qdrant-client>=1.9.0",
    "tenacity>=8.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_fs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
